--- a/Web/app/partials/poll/pollList.html
+++ b/Web/app/partials/poll/pollList.html
@@ -29,17 +29,14 @@
                 <div class="well" ng-show="polls.length == 0">There is not yet any Polls to vote on</div>
                 <a href="#/polls/{{poll.PollID}}" class="list-group-item" ng-repeat="poll in polls | filter:query">
                     <h4 class="list-group-item-heading">{{poll.Name}}<br>
-                        <div style="background-color:lightgreen; height:5px; margin-bottom:5px" ng-show="poll.Status == 'Open'"></div>
-                        <div style="background-color:red; height:5px; margin-bottom:5px" ng-show="poll.Status == 'Closed'"></div>
                         <small ng-show="poll.IsPassing">Passing</small>
                         <small ng-hide="poll.IsPassing">Failing</small>
                     </h4>
-                    <p class="list-group-item-text">
-                        <progress max="poll.VotesFor + poll.VotesAgainst + poll.VotesAbstaining" ng-show="poll.VotesFor >= 1 && poll.VotesAgainst >= 1" >
-                            <bar value="poll.VotesFor" type="success"><span>{{poll.VotesFor}} for</span></bar>
-                            <bar value="poll.VotesAgainst" type="danger"><span>{{poll.VotesAgainst}} against</span></bar>
-                        </progress>
-                    </p>
+                    <progress max="poll.VotesFor + poll.VotesAgainst + poll.VotesAbstaining">
+                        <bar value="poll.VotesFor" type="success"><span>{{poll.VotesFor}} for</span></bar>
+                        <bar value="poll.VotesAgainst" type="danger"><span>{{poll.VotesAgainst}} against</span></bar>
+                        <bar value="poll.VotesAbstaining"><span>{{poll.VotesAbstaining}} abstain</span></bar>
+                    </progress>
                 </a>
             </div>
         </div>
