Removed incorrect link on Notepassing menu

--- a/Web/app/partials/menus/navMenu.html
+++ b/Web/app/partials/menus/navMenu.html
@@ -20,7 +20,7 @@
                     <a href="#/polls">Polls</a>
                 </li>
                 <li>
-                    <a href="#/polls">Note passing</a>
+                    <a>Note passing</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
