Changed not implemented message for Notepassing

--- a/Web/app/partials/event/landing.html
+++ b/Web/app/partials/event/landing.html
@@ -21,7 +21,7 @@
             <h2>
                 <span class="glyphicon glyphicon-envelope"></span> Note passing</h2>
             <p>Message other delegates in real-time without needing to exchange your phone, email, or IM details</p>
-            <div class="alert alert-danger">We haven't finished this yet</div>
+            <div class="alert alert-danger">We haven't finished this feature</div>
         </a>
     </div>
 </div>
