--- a/Web/app/partials/speakersList/editableSpeakerList.html
+++ b/Web/app/partials/speakersList/editableSpeakerList.html
@@ -1,5 +1,5 @@
 <div ui-sortable="speakerReorder" ng-model="speakers">
-    <a class="list-group-item" ng-repeat="speaker in speakers">
+    <a class="list-group-item" ng-animate="'animate'" ng-repeat="speaker in speakers">
         <div class="media">
             <img class="media-object pull-left" ng-src="{{speaker.Attendee.Profile.ProfilePictureUri}}">
             <div class="media-body">
