--- a/Web/app/partials/poll/votes.html
+++ b/Web/app/partials/poll/votes.html
@@ -1,11 +1,9 @@
 <ytm-nav-menu></ytm-nav-menu>
 <div class="container body-content">
-    <alert type="info" ng-show="info" close="info=''">{{info}}</alert>
-    <alert type="danger" ng-show="error" close="error=''"><b>Doh! </b>{{error}}</alert>
     <div>
         <h2>{{poll.Name}}
             </br>
-            <div class="pull-right">
+            <div class="pull-right" ng-show="event.CreatorID == profile.ProfileID || poll.CreatorID == profile.ProfileID">
                 <div class="btn-group" dropdown is-open="isSettingsOpen">
                     <button type="button" class="btn btn-default dropdown-toggle">
                         <span class="glyphicon glyphicon-cog"></span>
