--- a/Web/app/partials/speakersList/speakerList.html
+++ b/Web/app/partials/speakersList/speakerList.html
@@ -1,4 +1,4 @@
-<a class="list-group-item" ng-repeat="speaker in speakers">
+<a class="list-group-item" ng-animate="'animate'" ng-repeat="speaker in speakers">
     <div class="media">
         <img class="media-object pull-left" ng-src="{{speaker.Attendee.Profile.ProfilePictureUri}}">
         <div class="media-body">
