Added Add another speaker function

--- a/Web/app/partials/attendeeList.html
+++ b/Web/app/partials/attendeeList.html
@@ -8,7 +8,7 @@
 </div>
 <a href="#/viewProfile/{{attendee.Profile.ProfileID}}" class="list-group-item" ng-animate="'animate'" ng-repeat="attendee in attendees | filter:queryAttendees">
     <div class="media">
-        <img class="media-object pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}">
+        <img class="media-object pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}" ng-click="showProfile(speaker.Attendee.Profile.ProfileID)">
         <div class="media-body">
             <h4 class="media-heading">{{attendee.Name}}</h4>
             {{attendee.Profile.Name}}
