Added automatic speakers refresh every 30 seconds if you do not own the Event or Speakers list
Resolves issue #9

--- a/Web/app/partials/speakersList/listSpeakers.html
+++ b/Web/app/partials/speakersList/listSpeakers.html
@@ -21,7 +21,7 @@
                             <span class="glyphicon glyphicon-bullhorn"></span> Speak
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                        <ul class="dropdown-menu" role="menu">
                             <li ng-click="add('For')"><a>Speak For</a></li>
                             <li ng-click="add('Against')"><a>Speak Against</a></li>
                             <li ng-click="add('None')"><a>Neutral</a></li>
